objects/Product_Interested__c.object
<CustomObject>
    <fields>
        <fullName>Building__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup for buildings</description>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Products Interested</relationshipLabel>
        <relationshipName>Products_Interested</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-5</fullName>
                </value>
                <value>
                    <fullName>6-20</fullName>
                </value>
                <value>
                    <fullName>21-50</fullName>
                </value>
                <value>
                    <fullName>51-100</fullName>
                </value>
                <value>
                    <fullName>101-200</fullName>
                </value>
                <value>
                    <fullName>201+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup for contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Products Interested</relationshipLabel>
        <relationshipName>Products_Interested</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Journey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field for journey</description>
        <label>Journey</label>
        <referenceTo>Journey__c</referenceTo>
        <relationshipLabel>Products Interested</relationshipLabel>
        <relationshipName>Products_Interested</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup for lead</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Products Interested</relationshipLabel>
        <relationshipName>Products_Interested</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Desks__c</fullName>
        <label>Number of Desks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-5</fullName>
                </value>
                <value>
                    <fullName>6-20</fullName>
                </value>
                <value>
                    <fullName>21-50</fullName>
                </value>
                <value>
                    <fullName>51-100</fullName>
                </value>
                <value>
                    <fullName>101-200</fullName>
                </value>
                <value>
                    <fullName>201+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <description>Store the value of product line for lead</description>
        <label>Product Line</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <description>Set the date of record is created or updated</description>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(OR(Journey__c == null,Journey__c == ""),"", TEXT(Journey__r.Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Journey Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <formula>Product_Line__c &amp;"-"&amp; TEXT(Number_of_Desks__c)&amp;"-"&amp; IF(OR(Lead__c==null,Lead__c==""),Contact__c, Lead__c) &amp;"-"&amp; Building__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique_Key</label>
        <type>Text</type>
    </fields>
    <description>This object is use to store information related to space requirement of particular company in terms of desks</description>
    <label>Product Interested</label>
    <nameField>
        <displayFormat>PRDINT-{000000}</displayFormat>
        <label>Product Interested Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products Interested</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>